--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <title id="title">转账跳转中......</title>
+  <title id="title">跳转中......</title>
  </head>
  <body>
   <script>
@@ -22,7 +22,7 @@
    window.location.href="static/qq.png"
   }else if(userAgent.indexOf(alipay)!=-1){
    //支付宝
-   window.location.href="static/alipay.png";
+   window.location.href="https://qr.alipay.com/a6x097640ozd4dus9ljbg27";
   }else{
    //不是支付宝、微信或QQ中的一个
    alert("无法识别的客户端！请在QQ、微信或支付宝内打开！");
@@ -30,7 +30,7 @@
 </script>
   <div id="container">
    <h1>详细信息</h1>
-   <h3>如果遇到了问题，请将此页面截屏发送给开发者</h3>
+   <h3>如果遇到了问题，请将此页面截屏发送给我</h3>
    <p>微信：15521680279</p>
    <div id="ua"><p>UA:</p></div> 
    <duv id="link"><p>URL:</p></div>
