--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   userAgent = getUA();
   if(userAgent.indexOf(wechat)!=-1){
    //微信
-   window.location.href="static/wechat.png"
+   window.location.href="https://u.wechat.com/EHd_T1sjhqmU2gjlKSbEJKI"
   }else if(userAgent.indexOf(qq)!=-1){
    //QQ
-   window.location.href="static/qq.png"
+   window.location.href="http://qm.qq.com/cgi-bin/qm/qr?k=w5xBB5O5XHy7k36xwitVg7Y_UC7EQPKF"
   }else if(userAgent.indexOf(alipay)!=-1){
    //支付宝
    window.location.href="https://qr.alipay.com/a6x097640ozd4dus9ljbg27";
