--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   userAgent = getUA();
   if(userAgent.indexOf(wechat)!=-1){
    //微信
-   window.location.href="https://u.wechat.com/EHd_T1sjhqmU2gjlKSbEJKI"
+   window.location.href="static/wechat.png"
   }else if(userAgent.indexOf(qq)!=-1){
    //QQ
    window.location.href="http://qm.qq.com/cgi-bin/qm/qr?k=w5xBB5O5XHy7k36xwitVg7Y_UC7EQPKF"
