--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
+<meta charset="UTF-8">
  <head>
-  <title id="title">跳转中......</title>
+  <title id="title">跳转到HRHsu</title>
  </head>
  <body>
   <script>
@@ -8,8 +9,8 @@
    return navigator.userAgent;
   }
   alipayURL="https://qr.alipay.com/a6x097640ozd4dus9ljbg27";//从支付宝二维码里得到的URL
-	wechatURL="https://u.wechat.com/EHd_T1sjhqmU2gjlKSbEJKI";//从微信二维码里得到的URL
-	qqURL="http://qm.qq.com/cgi-bin/qm/qr?k=w5xBB5O5XHy7k36xwitVg7Y_UC7EQPKF";//从QQ二维码里得到的URL
+  wechatURL="https://u.wechat.com/EHd_T1sjhqmU2gjlKSbEJKI";//从微信二维码里得到的URL
+  qqURL="http://qm.qq.com/cgi-bin/qm/qr?k=w5xBB5O5XHy7k36xwitVg7Y_UC7EQPKF";//从QQ二维码里得到的URL
   wechat = "MicroMessenger";
   alipay = "AlipayClient";
   qq = "QQ";
